# Vidiom

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: hourly.yml
deploy/: crontab.example  vidiom-web.service  vidiom.service
docs/: architecture-control-plan.md  development-blockers.md  development-task-breakdown.md  libtv-product-function-description.md  model-provider-integration.md  next-product-function-spec.md  next-product-requirement.md  product-gap-analysis.md  real-model-smoke-result.md
scripts/: validate.sh
src/vidiom/: canvas.py  canvas_schema.py  cli.py  config.py  generator.py  ingest.py  pipeline.py  prompts.py  providers.py  scheduler.py  schema.py  smoke.py  storage.py  storyboard.py  storyboard_schema.py  web.py
src/vidiom/static/: app.js  index.html  styles.css
tests/: test_ingest.py  test_pipeline.py  test_providers.py  test_schema.py  test_smoke.py  test_storyboard.py  test_web.py
